force-app/main/default/objects/ContentVersion/fields/Date_of_Document__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Document__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Non-mandatory date field to capture ‘Date of Document’ (e.g. date email was sent, or date of report - not the date the file was uploaded to CMOS as this is already captured).</description>
    <inlineHelpText>e.g. date email was sent, or date of report - not the date the file was uploaded to CMOS as this is already captured</inlineHelpText>
    <label>Date of Document</label>
    <type>DateTime</type>
</CustomField>