force-app/main/default/objects/ContentVersion/fields/Document_Category__c.field-meta.xml
<CustomField>
    <fullName>Document_Category__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <label>Document Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Statements</fullName>
            </value>
            <value>
                <fullName>AFCA Correspondence</fullName>
            </value>
            <value>
                <fullName>AFCA Decision</fullName>
            </value>
            <value>
                <fullName>ANZ Letter/Email</fullName>
            </value>
            <value>
                <fullName>CAD Approval</fullName>
            </value>
            <value>
                <fullName>Customer Acceptance</fullName>
            </value>
            <value>
                <fullName>Customer Letter/Email</fullName>
            </value>
            <value>
                <fullName>Evidence of Implementation</fullName>
            </value>
            <value>
                <fullName>File Note</fullName>
            </value>
            <value>
                <fullName>Final Response to Customer</fullName>
            </value>
            <value>
                <fullName>Internal Correspondence</fullName>
            </value>
            <value>
                <fullName>Statement of Financial Position</fullName>
            </value>
            <value>
                <fullName>Third Party Authority</fullName>
            </value>
            <value>
                <fullName>CFaaS File</fullName>
            </value>
            <value>
                <fullName>DAON File</fullName>
            </value>
            <value>
                <fullName>DAON TrustX File</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>