force-app/main/default/objects/ContentVersion/fields/Document_Flag__c.field-meta.xml
<CustomField>
    <fullName>Document_Flag__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>document flag</description>
    <inlineHelpText>Help Identify the sensitivity of the document</inlineHelpText>
    <label>Document Flag</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Draft</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Privileged</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Working draft</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Final version</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Attached to the incorrect case file</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Duplicate</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Sensitive </label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Medical Information</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Not to be exchanged</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>