force-app/main/default/objects/ContentVersion/fields/Internal_Description__c.field-meta.xml
<CustomField>
    <fullName>Internal_Description__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Text field to store description</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Internal Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>