force-app/main/default/objects/ContentVersion/fields/Party_who_sent_created_file__c.field-meta.xml
<CustomField>
    <fullName>Party_who_sent_created_file__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <label>Party who sent/created file</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wealth Product Manufacturer</fullName>
            </value>
            <value>
                <fullName>AFCA</fullName>
            </value>
            <value>
                <fullName>Small Business Ombudsman</fullName>
            </value>
            <value>
                <fullName>Office of the Australian Information Commissioner (OAIC)</fullName>
            </value>
            <value>
                <fullName>State Tribunal</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Nominated 3rd Party Representative of Customer</fullName>
            </value>
            <value>
                <fullName>Internal business unit</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>