force-app/main/default/objects/ContentVersion/fields/Sent_Created_Other__c.field-meta.xml
<CustomField>
    <fullName>Sent_Created_Other__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Other Internal BU who sent/created file</description>
    <inlineHelpText>If &quot;Other&quot; option selected above</inlineHelpText>
    <label>Other who sent/created file</label>
    <length>255</length>
    <type>Text</type>
</CustomField>