force-app/main/default/objects/ContentVersion/fields/Sent_Created_Party_Details__c.field-meta.xml
<CustomField>
    <fullName>Sent_Created_Party_Details__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Details of internal BU or other party who sent or created the file</description>
    <inlineHelpText>If &apos;Internal BU&apos; or &apos;Other&apos; selected, please elaborate</inlineHelpText>
    <label>Provide further details of party</label>
    <length>255</length>
    <type>Text</type>
</CustomField>