force-app/main/default/objects/ContentVersion/fields/Type_of_Document__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Document__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <label>Type of Document</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Correspondence</fullName>
            </value>
            <value>
                <fullName>AFCA determination</fullName>
            </value>
            <value>
                <fullName>Statement of Financial Position (SOFP)</fullName>
            </value>
            <value>
                <fullName>File note</fullName>
            </value>
            <value>
                <fullName>Internal correspondence</fullName>
            </value>
            <value>
                <fullName>Deed of Settlement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>