force-app/main/default/objects/ContentVersion/fields/UUID__c.field-meta.xml
<CustomField>
    <fullName>UUID__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Unique external ID for the record. Useful for use cases such as data backup and restoration.</description>
    <externalId>true</externalId>
    <label>UUID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>