force-app/main/default/objects/ContentVersion/fields/Wealth_Product_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Wealth_Product_Manufacturer__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Additional field to select a specific wealth product manufacturer</description>
    <label>Wealth Product Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Party_who_sent_created_file__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Zurich</fullName>
            </value>
            <value>
                <fullName>IOOF</fullName>
            </value>
            <value>
                <fullName>Netwealth</fullName>
            </value>
            <value>
                <fullName>QBE</fullName>
            </value>
            <value>
                <fullName>Allianz</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>