force-app/main/default/objects/ContentVersion/recordTypes/CFaaS_File.recordType-meta.xml
<RecordType>
    <fullName>CFaaS_File</fullName>
    <active>true</active>
    <description>Files representing content stored in CFaaS</description>
    <label>CFaaS File</label>
</RecordType>