force-app/main/default/objects/ContentVersion/recordTypes/DAON_File.recordType-meta.xml
<RecordType>
    <fullName>DAON_File</fullName>
    <active>true</active>
    <description>Used for Onboarding Fallout Workflow to Create records</description>
    <label>DAON File</label>
</RecordType>