force-app/main/default/objects/ContentVersion/recordTypes/DAON_TrustX_File.recordType-meta.xml
<RecordType>
    <fullName>DAON_TrustX_File</fullName>
    <active>true</active>
    <description>Content Version records created by GCP for TrustX eIDV Cases</description>
    <label>DAON TrustX File</label>
</RecordType>