force-app/main/default/objects/ContentVersion/recordTypes/File.recordType-meta.xml
<RecordType>
    <fullName>File</fullName>
    <active>true</active>
    <description>Default record type for files</description>
    <label>File</label>
</RecordType>