force-app/main/default/objects/ContentVersion/recordTypes/IDR_Attachment.recordType-meta.xml
<RecordType>
    <fullName>IDR_Attachment</fullName>
    <active>true</active>
    <description>Files created by the email service</description>
    <label>Email Attachment</label>
</RecordType>