force-app/main/default/objects/ContentVersion/recordTypes/IDR_File.recordType-meta.xml
<RecordType>
    <fullName>IDR_File</fullName>
    <active>true</active>
    <description>File uploaded to a CMOS complaint record</description>
    <label>Complaint File</label>
</RecordType>