force-app/main/default/objects/ContentVersion/recordTypes/Systemic_Issue_File.recordType-meta.xml
<RecordType>
    <fullName>Systemic_Issue_File</fullName>
    <active>true</active>
    <description>File uploaded to a systemic issue record</description>
    <label>Systemic Issue File</label>
</RecordType>