force-app/main/default/objects/ContentVersion/validationRules/VR02_Restrict_Future_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>VR02_Restrict_Future_Date</fullName>
    <active>true</active>
    <description>Validation rule to restrict future data in Date of document field</description>
    <errorConditionFormula>AND(
$Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
Date_of_Document__c &gt; NOW() 
)</errorConditionFormula>
    <errorDisplayField>Date_of_Document__c</errorDisplayField>
    <errorMessage>Please select the current date or an earlier date</errorMessage>
</ValidationRule>